--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-animate": "^1.4.9",
+    "angular-bootstrap": "^0.12.2",
     "body-parser": "~1.13.2",
     "bootstrap": "^3.3.5",
     "bootstrap-switch": "^3.3.2",
